Constructed base for backend

--- a/backend/storemanagement/src/main/resources/application.properties
+++ b/backend/storemanagement/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+jwt.expiration=600000
+jwt.secret="sapopreintern"
 
