--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.27.0",
+    "firebase": "^9.6.2",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -26,6 +27,7 @@
     "reactstrap": "^9.0.1",
     "sass": "^1.45.0",
     "styled-components": "^5.3.3",
+    "swiper": "^7.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
