--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.27.0",
     "firebase": "^9.6.2",
+    "highcharts": "^9.3.2",
+    "highcharts-react-official": "^3.1.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
